# taco

./: .gitignore  LICENSE  README.md  directory.structure  main.py  programming_template.txt  pyproject.toml  requirements.txt  setup.py  test_tool_calling.py
.taico/: generated_code.md
docs/: CreateCodeUsageGuide.md  taco_logo.ascii  tool_orchestration_design.md
none/: generated_code.md
taco/: __init__.py  cli.py
taco/context/: __init__.py  engine.py  template.py
taco/context/defaults/: __init__.py  chat.py
taco/context/examples/: code.py
taco/core/: __init__.py  chat.py  command_handler.py  config.py  context_commands.py  debug_display.py  message_handler.py  message_processor.py  model.py  tool_executor.py  tool_stack.py
taco/tools/: __init__.py  context_aware.py  executor.py  registry.py
taco/tools/builtin/: __init__.py  basic.py  create_code.py  explainer.py  model_manager.py  parameter_collector.py  save_file.py
taco/tools/examples/: __init__.py  code.py  parameter_collecter.py
taco/utils/: __init__.py  debug.py  debug_logger.py  display.py
